--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
-bin/
+# Default ignored files
+/shelf/
+/workspace.xml
+# Editor-based HTTP Client requests
+/httpRequests/
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
+
+.idea
+cmake-build-debug
+.DS_Store
