--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.21)
 project(sanic C)
+project(sanic_main C)
 
 set(CMAKE_C_STANDARD 17)
 
-add_executable(sanic main.c http.c request.c)
+add_library(sanic http.c http_request.c http_response.c http_header.h http_method.h log.h)
+add_executable(sanic_main main.c)
+
+target_link_libraries(sanic_main sanic)
