Set clang as default compiler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ project(sanic C)
 project(sanic_main C)
 
 set(CMAKE_C_STANDARD 17)
+set(CMAKE_C_COMPILER clang)
+
+add_compile_options(-fblocks)
 
 add_library(sanic http.c http_request.c http_response.c http_header.h http_method.h log.h)
 add_executable(sanic_main main.c)
