--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -7,6 +7,6 @@ string(LENGTH "${CMAKE_SOURCE_DIR}/" SOURCE_PATH_SIZE)
 add_definitions("-DSOURCE_PATH_SIZE=${SOURCE_PATH_SIZE}")
 
 add_subdirectory(../ext/bdwgc "${CMAKE_CURRENT_BINARY_DIR}/ext/bdwgc")
-add_library(sanic http.c http_request.c http_response.c middleware.c)
+add_library(sanic http.c http_request.c http_response.c middleware.c include/sanic.h)
 include_directories(../ext/bdwgc/include)
 target_link_libraries(sanic gc)
