--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -9,5 +9,15 @@ add_definitions("-DSOURCE_PATH_SIZE=${SOURCE_PATH_SIZE}")
 add_subdirectory(../ext/bdwgc "${CMAKE_CURRENT_BINARY_DIR}/ext/bdwgc")
 include_directories(../ext/bdwgc/include)
 
-add_library(sanic STATIC http_request.c http_response.c middleware.c http.c include/sanic.h http_header.c)
+add_compile_options(-Wno-string-plus-int)
+
+add_library(sanic STATIC
+        http_header.c
+        http_request.c
+        internal/http_util.c
+        middleware.c
+        internal/request_handler.c
+        route.c
+        internal/request_util.c
+        server.c include/internal/http_util.h internal/middleware_handler.c include/internal/middleware_handler.h)
 target_link_libraries(sanic PUBLIC gc)
