Fix suppress statement

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -11,7 +11,7 @@ include_directories(../ext/bdwgc/include)
 
 add_compile_options(-Wno-string-plus-int)
 add_compile_options(-Wno-attributes)
-add_compile_options(-Wno-stringop-overflow=)
+add_compile_options(-Wno-stringop-overflow)
 
 add_library(sanic STATIC
         http_header.c
