Implement kqueue, start basis for io_uring

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -7,6 +7,8 @@ string(LENGTH "${CMAKE_SOURCE_DIR}/" SOURCE_PATH_SIZE)
 add_definitions("-DSOURCE_PATH_SIZE=${SOURCE_PATH_SIZE}")
 
 add_definitions(-DGC_THREADS)
+add_definitions(-DPARALLEL_MARK)
+add_definitions(-DTHREAD_LOCAL_ALLOC)
 set(enable_threads ON)
 
 add_subdirectory(../ext/bdwgc "${CMAKE_CURRENT_BINARY_DIR}/ext/bdwgc")
@@ -18,6 +20,15 @@ include_directories(../ext/uuid4/src)
 add_definitions(-Wno-string-plus-int)
 add_definitions(-Wno-format-extra-args)
 
+if (UNIX)
+    set(server_impl server_bsd.c)
+elseif (LINUX)
+    message( FATAL_ERROR "linux support for sanic is not done yet :/" )
+    set(server_impl server_linux.c.c)
+else()
+    message( FATAL_ERROR "sanic is not supported on this system :(" )
+endif()
+
 add_library(sanic STATIC
         http_method.c
         http_request.c
@@ -25,7 +36,7 @@ add_library(sanic STATIC
         middleware.c
         route.c
         sanic.c
-        server.c
+        ${server_impl}
 
         internal/http_util.c
         internal/http_param.c
